cleaned up, entanglement generation all in one function

--- a/arbitrary_quantum_network_simulation.ipynb
+++ b/arbitrary_quantum_network_simulation.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOey7u0fgVCO534npTH4Ssa"
+      "authorship_tag": "ABX9TyNM4ownIsG5k/JQTDkOqn4L"
     },
     "kernelspec": {
       "name": "python3",
@@ -25,7 +25,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "V2PSL5D_ErFs",
-        "outputId": "f225e57e-2c6e-440f-bae8-8b81eb551499"
+        "outputId": "2b8edf3f-4826-412a-d2de-df1a59725db4"
       },
       "execution_count": 1,
       "outputs": [
@@ -33,14 +33,10 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Collecting qutip\n",
-            "  Downloading qutip-5.0.3.post1-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (28.0 MB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m28.0/28.0 MB\u001b[0m \u001b[31m23.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25hRequirement already satisfied: numpy>=1.22 in /usr/local/lib/python3.10/dist-packages (from qutip) (1.25.2)\n",
+            "Requirement already satisfied: qutip in /usr/local/lib/python3.10/dist-packages (5.0.3.post1)\n",
+            "Requirement already satisfied: numpy>=1.22 in /usr/local/lib/python3.10/dist-packages (from qutip) (1.25.2)\n",
             "Requirement already satisfied: scipy>=1.9 in /usr/local/lib/python3.10/dist-packages (from qutip) (1.11.4)\n",
-            "Requirement already satisfied: packaging in /usr/local/lib/python3.10/dist-packages (from qutip) (24.1)\n",
-            "Installing collected packages: qutip\n",
-            "Successfully installed qutip-5.0.3.post1\n"
+            "Requirement already satisfied: packaging in /usr/local/lib/python3.10/dist-packages (from qutip) (24.1)\n"
           ]
         }
       ]
@@ -76,8 +72,10 @@
         "one_rho = basis(2,1) * basis(2,1).dag()\n",
         "I = lambda: qeye(2)\n",
         "\n",
+        "\n",
         "def initial_rho(num_qubits):\n",
         "  return tensor([zero_rho for i in range (num_qubits)])\n",
+        "\n",
         "\n",
         "def bell_state(state):\n",
         "  \"\"\"\n",
@@ -112,6 +110,7 @@
         "  else:\n",
         "    return op\n",
         "\n",
+        "\n",
         "def pad_op_to_right(op, num_identities):\n",
         "  if num_identities > 0:\n",
         "    right_op = I()\n",
@@ -120,6 +119,7 @@
         "    return tensor(op, right_op)\n",
         "  else:\n",
         "    return op\n",
+        "\n",
         "\n",
         "def state_inserter(rho_initial, target_qubits, state):\n",
         "  \"\"\"\n",
@@ -158,10 +158,6 @@
         "  return rho\n",
         "\n",
         "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
         "def time_for_link(eta_eff):\n",
         "  \"\"\"\n",
         "  Gets the time taken to generate entanglement between 2 adjacent nodes\n",
@@ -192,13 +188,13 @@
       "metadata": {
         "id": "W29qfNdbEvbo"
       },
-      "execution_count": 64,
+      "execution_count": 3,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "def entanglement_generation(rho_initial, q1, q2, F_initial):\n",
+        "def entanglement_generation(rho_initial, q1, q2, F_initial, n, P_link):\n",
         "  \"\"\"\n",
         "    This function generates entanglement across 2 neighbouring repeater stations\n",
         "    q1 and q2. It does this by first creating a phi+ bell state density matrix\n",
@@ -223,7 +219,6 @@
         "  rho = F_initial * bell_state('phi+') + ((1 - F_initial) / 3) * (bell_state('phi-') +\n",
         "                                                                       bell_state('psi+') +\n",
         "                                                                       bell_state('psi-'))\n",
-        "\n",
         "  # inserting the bell pair into rho_initial\n",
         "  if len(qubits_left_list) != 0:\n",
         "    rho_qubits_left = rho_initial.ptrace(qubits_left_list)\n",
@@ -235,75 +230,98 @@
         "\n",
         "\n",
         "  # ADDING MEMORY NOISE\n",
-        "  T_dp = 0.001 # dephasing time\n",
-        "\n",
-        "\n",
         "  # dephasing channel for q1 (stays in memory for twice as long)\n",
         "  rho = dephasing_channel(rho=rho, t = 2 * d/c, left_padding = num_qubits_left, right_padding = num_qubits_right + 1)\n",
         "\n",
         "  # dephasing channel for q2\n",
         "  rho = dephasing_channel(rho=rho, t = d/c, left_padding = num_qubits_left + 1, right_padding = num_qubits_right)\n",
         "\n",
+        "\n",
+        "  # DARK COUNTS\n",
+        "  def dark_counts_entang_gen(rho_initial, q1, q2, n):\n",
+        "    \"\"\"\n",
+        "    q2 experiences the dark counts. q1 is included in the partial trace as\n",
+        "    entanglement is broken otherwise\n",
+        "    n = total probability that a pair is established = P_link * n_ch(d)\n",
+        "    NOTE: This only does one target_qubit\n",
+        "    \"\"\"\n",
+        "    # channel efficiency\n",
+        "    n_ch = lambda L: np.exp(-L/L_att)\n",
+        "\n",
+        "    # total probability that a pair is established\n",
+        "    n = P_link * n_ch(d)\n",
+        "\n",
+        "    # the chance for a detector to click (including dark counts)\n",
+        "    n_eff = 1 - (1 - n) * (1 - p_d) ** 2\n",
+        "\n",
+        "    # given a click occurs, the probability it is from a real event\n",
+        "    alpha = lambda n: (n * (1 - p_d)) / n_eff\n",
+        "\n",
+        "    dark_count_rho = rho_initial.ptrace([q1, q2]) * alpha(n) + (1 - alpha(n)) / 2 * tensor(rho_initial.ptrace(q1) , I())\n",
+        "    rho = state_inserter(rho_initial = rho_initial,\n",
+        "                        target_qubits = [q1,q2], state = dark_count_rho)\n",
+        "    return rho\n",
+        "\n",
+        "  rho = dark_counts_entang_gen(rho_initial=rho, q1=q1, q2=q2, n=n)\n",
+        "\n",
         "  return rho"
       ],
       "metadata": {
         "id": "UtxWBjOk22Fx"
       },
-      "execution_count": 65,
+      "execution_count": 4,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "def dark_counts_ent_gen(rho_initial, q1, q2, n):\n",
-        "  \"\"\"\n",
-        "  q2 experiences the dark counts. q1 is included in the partial trace as\n",
-        "  entanglement is broken otherwise\n",
-        "  n = total probability that a pair is established = P_link * n_ch(d)\n",
-        "  NOTE: This only does one target_qubit\n",
-        "  \"\"\"\n",
-        "\n",
-        "  dark_count_rho = rho_initial.ptrace([q1, q2]) * alpha(n) + (1 - alpha(n)) / 2 * tensor(rho_initial.ptrace(q1) , I())\n",
-        "  rho = state_inserter(rho_initial = rho_initial,\n",
-        "                       target_qubits = [q1,q2], state = dark_count_rho)\n",
-        "  return rho"
-      ],
-      "metadata": {
-        "id": "h6zK2lFp7F6U"
-      },
-      "execution_count": 84,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# Printing partial traces\n",
+        "# DEFINING GLOBAL PARAMETERS\n",
+        "# Geometric Set Up\n",
         "num_qubits = 4\n",
         "total_L = 100\n",
         "d = total_L/(num_qubits - 1)\n",
-        "c = 2e8 # speed of light in fiber optic\n",
-        "rho = initial_rho(num_qubits)\n",
-        "q1 = 0\n",
-        "q2 = 1\n",
-        "p_d = 0.5\n",
-        "T_dp = 100\n",
         "\n",
-        "rho = entanglement_generation(rho_initial=rho, q1=0, q2=1, F_initial=1)\n",
-        "rho = dark_counts_ent_gen(rho_initial = rho, q1 = 0, q2=1, n = 0.5)\n",
+        "# Optical Fiber Properties\n",
+        "L_att = 22e3       # attenuation length of optical fiber\n",
+        "c = 2e8            # speed of light in fiber optic\n",
+        "\n",
+        "# Global Error Parameters\n",
+        "T_dp = 100         # dephasing time constant (memory error)\n",
+        "p_d = 0            # probability a dark count will occur in a detection window\n",
+        "\n",
+        "\n",
+        "# DEFINING ENTANGLEMENT GENERATION PARAMETERS\n",
+        "entang_gen_args = {\n",
+        "    'F_initial' : 1,     # initial fidelity of the bell state generated\n",
+        "    'n' : 1,             # probability a link is established between 2 neighbouring repeater stations\n",
+        "    'P_link' : 1       # probability a link is established without considering distance based losses\n",
+        "}"
+      ],
+      "metadata": {
+        "id": "KOZOmmI9GEfq"
+      },
+      "execution_count": 9,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# INITIALISING SYSTEM + RUNNNING ENTANGLEMENT GENERATION EVENT\n",
+        "rho = initial_rho(num_qubits)\n",
+        "rho = entanglement_generation(rho_initial=rho, q1=0, q2=1, **entang_gen_args)\n",
         "\n",
         "for i in range(num_qubits):\n",
         "  print(f'Qubit{i}\\n', rho.ptrace(i).full(), '\\n')\n",
-        "np.round(rho.ptrace([0,1]).full(), 3)\n",
-        "\n"
+        "np.round(rho.ptrace([0,1]).full(), 3)"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "KOZOmmI9GEfq",
-        "outputId": "89afa653-8d2c-41c9-b0ac-eb323a9c15ca"
+        "id": "0amzOK3IhFUS",
+        "outputId": "1b344d15-c4b2-452f-da35-f4c28a1a23dd"
       },
-      "execution_count": 95,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -314,8 +332,8 @@
             " [0.        +0.j 0.49993031+0.j]] \n",
             "\n",
             "Qubit1\n",
-            " [[0.50001743+0.j 0.        +0.j]\n",
-            " [0.        +0.j 0.49998258+0.j]] \n",
+            " [[0.5000697 +0.j 0.        +0.j]\n",
+            " [0.        +0.j 0.49993031+0.j]] \n",
             "\n",
             "Qubit2\n",
             " [[1.00000001+0.j 0.        +0.j]\n",
@@ -331,53 +349,25 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "array([[0.313+0.j, 0.   +0.j, 0.   +0.j, 0.125+0.j],\n",
-              "       [0.   +0.j, 0.188+0.j, 0.   +0.j, 0.   +0.j],\n",
-              "       [0.   +0.j, 0.   +0.j, 0.187+0.j, 0.   +0.j],\n",
-              "       [0.125+0.j, 0.   +0.j, 0.   +0.j, 0.312+0.j]])"
+              "array([[0.5+0.j, 0. +0.j, 0. +0.j, 0.5+0.j],\n",
+              "       [0. +0.j, 0. +0.j, 0. +0.j, 0. +0.j],\n",
+              "       [0. +0.j, 0. +0.j, 0. +0.j, 0. +0.j],\n",
+              "       [0.5+0.j, 0. +0.j, 0. +0.j, 0.5+0.j]])"
             ]
           },
           "metadata": {},
-          "execution_count": 95
+          "execution_count": 10
         }
       ]
     },
     {
       "cell_type": "markdown",
       "source": [
-        "# Setting Up Dark Counts"
+        "# Starting Entanglement Generation"
       ],
       "metadata": {
         "id": "ijkk7hTeZxma"
       }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# modelling time it takes to complete entangelment generation event\n",
-        "L_att = 22e3   # attenuation length of optical fibers, 22km\n",
-        "p_d = 0.5        # probability of dark count occuring in detection window\n",
-        "\n",
-        "# prob pair is established not taking into account distance based losses\n",
-        "P_link = 1\n",
-        "\n",
-        "# channel efficiency\n",
-        "n_ch = lambda L: np.exp(-L/L_att)\n",
-        "\n",
-        "# total probability that a pair is established\n",
-        "n = P_link * n_ch(d)\n",
-        "\n",
-        "# the chance for a detector to click (including dark counts)\n",
-        "n_eff = 1 - (1 - n) * (1 - p_d) ** 2\n",
-        "\n",
-        "# given a click occurs, the probability it is from a real event\n",
-        "alpha = lambda n: (n * (1 - p_d)) / n_eff\n"
-      ],
-      "metadata": {
-        "id": "ZZOBecDpaeqn"
-      },
-      "execution_count": 6,
-      "outputs": []
     },
     {
       "cell_type": "code",
@@ -414,8 +404,8 @@
         "num_qubits = 9\n",
         "total_L = 100\n",
         "d = total_L/(num_qubits - 1)\n",
-        "c = 2e8 # speed of light in fiber optic\n",
-        "rho_initial = initial_rho()\n",
+        "\n",
+        "rho_initial = initial_rho(num_qubits)\n",
         "\n",
         "rho = imperfect_bell_measurements(rho_initial = rho_initial, q1 = 0, q2 = 1, lambda_BSM = 0.5)\n",
         "\n",
@@ -427,9 +417,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "l6LC3bfVEQDQ",
-        "outputId": "c95fbf1c-35d1-4dda-a4f9-e58fa58152b2"
+        "outputId": "f8fe8372-4fb8-4568-a6e3-8f8576a3cf11"
       },
-      "execution_count": 8,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
@@ -483,17 +473,11 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "T_p = 1e-3\n",
-        "num_qubits = 5\n",
-        "total_L = 100\n",
-        "d = total_L/(num_qubits - 1)\n",
-        "c = 2e8 # speed of light in fiber optic"
-      ],
+      "source": [],
       "metadata": {
         "id": "dbY9SV5HG7qL"
       },
-      "execution_count": 9,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -502,7 +486,7 @@
       "metadata": {
         "id": "yutT_TixTTHM"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     }
   ]
