--- a/arbitrary_quantum_network_simulation.ipynb
+++ b/arbitrary_quantum_network_simulation.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNM4ownIsG5k/JQTDkOqn4L"
+      "authorship_tag": "ABX9TyPMNyW8Kh4DMwDm6mjadOqa"
     },
     "kernelspec": {
       "name": "python3",
@@ -25,7 +25,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "V2PSL5D_ErFs",
-        "outputId": "2b8edf3f-4826-412a-d2de-df1a59725db4"
+        "outputId": "955ad26f-0225-4f02-aa36-77e686e5dd46"
       },
       "execution_count": 1,
       "outputs": [
@@ -47,7 +47,8 @@
         "import numpy as np\n",
         "import matplotlib.pyplot as plt\n",
         "from qutip import *\n",
-        "import builtins"
+        "import builtins\n",
+        "from typing import List"
       ],
       "metadata": {
         "id": "HRVKsEv9Etd-"
@@ -158,7 +159,7 @@
         "  return rho\n",
         "\n",
         "\n",
-        "def time_for_link(eta_eff):\n",
+        "def time_for_link(eta_eff, T_p):\n",
         "  \"\"\"\n",
         "  Gets the time taken to generate entanglement between 2 adjacent nodes\n",
         "  Does this by generating random samples from a geometric distribution with\n",
@@ -178,12 +179,44 @@
         "\n",
         "\n",
         "def dephasing_channel(rho, t, left_padding, right_padding):\n",
-        "    dp_prob = (1 - np.exp(-t / T_dp)) / 2\n",
-        "    dp_op = np.sqrt(1 - dp_prob) * qeye(2) + np.sqrt(dp_prob) * sigmaz()\n",
-        "    dp_op = pad_op_to_left(dp_op, left_padding)\n",
-        "    dp_op = pad_op_to_right(dp_op, right_padding)\n",
-        "    rho_t = dp_op * rho * dp_op.dag()\n",
-        "    return rho_t"
+        "  dp_prob = (1 - np.exp(-t / T_dp)) / 2\n",
+        "  dp_op = np.sqrt(1 - dp_prob) * qeye(2) + np.sqrt(dp_prob) * sigmaz()\n",
+        "  dp_op = pad_op_to_left(dp_op, left_padding)\n",
+        "  dp_op = pad_op_to_right(dp_op, right_padding)\n",
+        "  rho_t = dp_op * rho * dp_op.dag()\n",
+        "  return rho_t\n",
+        "\n",
+        "def dark_counts_entang_gen(rho_initial, q1, q2, n, P_link):\n",
+        "  \"\"\"\n",
+        "  q2 experiences the dark counts. q1 is included in the partial trace as\n",
+        "  entanglement is broken otherwise\n",
+        "  n = total probability that a pair is established = P_link * n_ch(d)\n",
+        "  NOTE: This only does one target_qubit\n",
+        "  \"\"\"\n",
+        "  # channel efficiency\n",
+        "  n_ch = lambda L: np.exp(-L/L_att)\n",
+        "\n",
+        "  # total probability that a pair is established\n",
+        "  n = P_link * n_ch(d)\n",
+        "\n",
+        "  # the chance for a detector to click (including dark counts)\n",
+        "  n_eff = 1 - (1 - n) * (1 - p_d) ** 2\n",
+        "\n",
+        "  # given a click occurs, the probability it is from a real event\n",
+        "  alpha = lambda n: (n * (1 - p_d)) / n_eff\n",
+        "\n",
+        "  dark_count_rho = rho_initial.ptrace([q1, q2]) * alpha(n) + (1 - alpha(n)) / 2 * tensor(rho_initial.ptrace(q1) , I())\n",
+        "  rho = state_inserter(rho_initial = rho_initial,\n",
+        "                      target_qubits = [q1,q2], state = dark_count_rho)\n",
+        "  return rho\n",
+        "\n",
+        "\n",
+        "def initial_F_rho(rho_initial, target_qubits: List[int], F_initial: float):\n",
+        "  rho_bell = F_initial * bell_state('phi+') + ((1 - F_initial) / 3) * (bell_state('phi-') +\n",
+        "                                                                    bell_state('psi+') +\n",
+        "                                                                    bell_state('psi-'))\n",
+        "  rho = state_inserter(rho_initial=rho_initial, target_qubits=target_qubits, state=rho_bell)\n",
+        "  return rho"
       ],
       "metadata": {
         "id": "W29qfNdbEvbo"
@@ -194,7 +227,7 @@
     {
       "cell_type": "code",
       "source": [
-        "def entanglement_generation(rho_initial, q1, q2, F_initial, n, P_link):\n",
+        "def entanglement_generation(rho_initial, q1, q2, F_initial, n, P_link, T_p):\n",
         "  \"\"\"\n",
         "    This function generates entanglement across 2 neighbouring repeater stations\n",
         "    q1 and q2. It does this by first creating a phi+ bell state density matrix\n",
@@ -214,20 +247,8 @@
         "  qubits_right_list = [i + num_qubits_left+2 for i in range(num_qubits_right)]\n",
         "\n",
         "\n",
-        "  # GENERATING ENTANGLEMENT\n",
-        "  # initial density matrix of bell pair, taking into account errors initial fidelity\n",
-        "  rho = F_initial * bell_state('phi+') + ((1 - F_initial) / 3) * (bell_state('phi-') +\n",
-        "                                                                       bell_state('psi+') +\n",
-        "                                                                       bell_state('psi-'))\n",
-        "  # inserting the bell pair into rho_initial\n",
-        "  if len(qubits_left_list) != 0:\n",
-        "    rho_qubits_left = rho_initial.ptrace(qubits_left_list)\n",
-        "    rho = tensor(rho_qubits_left, rho)\n",
-        "\n",
-        "  if len(qubits_right_list) != 0:\n",
-        "    rho_qubits_right = rho_initial.ptrace(qubits_right_list)\n",
-        "    rho = tensor(rho, rho_qubits_right)\n",
-        "\n",
+        "  # GENERATING PHI+ BELL PAIR WITH FIDELITY F_INITIAL\n",
+        "  rho = initial_F_rho(rho_initial=rho_initial, target_qubits=[q1, q2], F_initial=F_initial)\n",
         "\n",
         "  # ADDING MEMORY NOISE\n",
         "  # dephasing channel for q1 (stays in memory for twice as long)\n",
@@ -236,33 +257,8 @@
         "  # dephasing channel for q2\n",
         "  rho = dephasing_channel(rho=rho, t = d/c, left_padding = num_qubits_left + 1, right_padding = num_qubits_right)\n",
         "\n",
-        "\n",
-        "  # DARK COUNTS\n",
-        "  def dark_counts_entang_gen(rho_initial, q1, q2, n):\n",
-        "    \"\"\"\n",
-        "    q2 experiences the dark counts. q1 is included in the partial trace as\n",
-        "    entanglement is broken otherwise\n",
-        "    n = total probability that a pair is established = P_link * n_ch(d)\n",
-        "    NOTE: This only does one target_qubit\n",
-        "    \"\"\"\n",
-        "    # channel efficiency\n",
-        "    n_ch = lambda L: np.exp(-L/L_att)\n",
-        "\n",
-        "    # total probability that a pair is established\n",
-        "    n = P_link * n_ch(d)\n",
-        "\n",
-        "    # the chance for a detector to click (including dark counts)\n",
-        "    n_eff = 1 - (1 - n) * (1 - p_d) ** 2\n",
-        "\n",
-        "    # given a click occurs, the probability it is from a real event\n",
-        "    alpha = lambda n: (n * (1 - p_d)) / n_eff\n",
-        "\n",
-        "    dark_count_rho = rho_initial.ptrace([q1, q2]) * alpha(n) + (1 - alpha(n)) / 2 * tensor(rho_initial.ptrace(q1) , I())\n",
-        "    rho = state_inserter(rho_initial = rho_initial,\n",
-        "                        target_qubits = [q1,q2], state = dark_count_rho)\n",
-        "    return rho\n",
-        "\n",
-        "  rho = dark_counts_entang_gen(rho_initial=rho, q1=q1, q2=q2, n=n)\n",
+        "  # ADDING DARK COUNTS NOISE\n",
+        "  rho = dark_counts_entang_gen(rho_initial=rho, q1=q1, q2=q2, n=n, P_link=P_link)\n",
         "\n",
         "  return rho"
       ],
@@ -294,13 +290,14 @@
         "entang_gen_args = {\n",
         "    'F_initial' : 1,     # initial fidelity of the bell state generated\n",
         "    'n' : 1,             # probability a link is established between 2 neighbouring repeater stations\n",
-        "    'P_link' : 1       # probability a link is established without considering distance based losses\n",
+        "    'P_link' : 1,        # probability a link is established without considering distance based losses\n",
+        "    'T_p' : 0            # time to prepare an entangled pair\n",
         "}"
       ],
       "metadata": {
         "id": "KOZOmmI9GEfq"
       },
-      "execution_count": 9,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -319,9 +316,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "0amzOK3IhFUS",
-        "outputId": "1b344d15-c4b2-452f-da35-f4c28a1a23dd"
+        "outputId": "b18e69e6-e53a-41bc-d787-d7ce57c3df8e"
       },
-      "execution_count": 10,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -356,7 +353,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 10
+          "execution_count": 6
         }
       ]
     },
@@ -417,9 +414,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "l6LC3bfVEQDQ",
-        "outputId": "f8fe8372-4fb8-4568-a6e3-8f8576a3cf11"
+        "outputId": "54a0f659-6d58-423f-e68a-0bbe54891987"
       },
-      "execution_count": 11,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -477,7 +474,7 @@
       "metadata": {
         "id": "dbY9SV5HG7qL"
       },
-      "execution_count": 12,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -486,7 +483,7 @@
       "metadata": {
         "id": "yutT_TixTTHM"
       },
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": []
     }
   ]
