about to change entanglement swapping function to be able to be across any 4 qubits, not just 4 qubits beside eachother

--- a/arbitrary_quantum_network_simulation.ipynb
+++ b/arbitrary_quantum_network_simulation.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPMNyW8Kh4DMwDm6mjadOqa"
+      "authorship_tag": "ABX9TyP1pL84edij1Mpr0Ms8rk9R"
     },
     "kernelspec": {
       "name": "python3",
@@ -25,7 +25,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "V2PSL5D_ErFs",
-        "outputId": "955ad26f-0225-4f02-aa36-77e686e5dd46"
+        "outputId": "466020d1-0a07-4627-cc62-7d8b01f24345"
       },
       "execution_count": 1,
       "outputs": [
@@ -33,10 +33,14 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Requirement already satisfied: qutip in /usr/local/lib/python3.10/dist-packages (5.0.3.post1)\n",
-            "Requirement already satisfied: numpy>=1.22 in /usr/local/lib/python3.10/dist-packages (from qutip) (1.25.2)\n",
+            "Collecting qutip\n",
+            "  Downloading qutip-5.0.3.post1-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (28.0 MB)\n",
+            "\u001b[?25l     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m0.0/28.0 MB\u001b[0m \u001b[31m?\u001b[0m eta \u001b[36m-:--:--\u001b[0m\r\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m0.1/28.0 MB\u001b[0m \u001b[31m4.1 MB/s\u001b[0m eta \u001b[36m0:00:07\u001b[0m\r\u001b[2K     \u001b[91m━\u001b[0m\u001b[91m╸\u001b[0m\u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.3/28.0 MB\u001b[0m \u001b[31m17.8 MB/s\u001b[0m eta \u001b[36m0:00:02\u001b[0m\r\u001b[2K     \u001b[91m━━━━━━━\u001b[0m\u001b[90m╺\u001b[0m\u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m5.2/28.0 MB\u001b[0m \u001b[31m48.4 MB/s\u001b[0m eta \u001b[36m0:00:01\u001b[0m\r\u001b[2K     \u001b[91m━━━━━━━━━━━━━━\u001b[0m\u001b[90m╺\u001b[0m\u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m9.9/28.0 MB\u001b[0m \u001b[31m68.9 MB/s\u001b[0m eta \u001b[36m0:00:01\u001b[0m\r\u001b[2K     \u001b[91m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[90m╺\u001b[0m\u001b[90m━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m14.3/28.0 MB\u001b[0m \u001b[31m125.0 MB/s\u001b[0m eta \u001b[36m0:00:01\u001b[0m\r\u001b[2K     \u001b[91m━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[90m╺\u001b[0m\u001b[90m━━━━━━━━━━━\u001b[0m \u001b[32m19.7/28.0 MB\u001b[0m \u001b[31m133.8 MB/s\u001b[0m eta \u001b[36m0:00:01\u001b[0m\r\u001b[2K     \u001b[91m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[90m╺\u001b[0m\u001b[90m━━━━━\u001b[0m \u001b[32m23.8/28.0 MB\u001b[0m \u001b[31m126.6 MB/s\u001b[0m eta \u001b[36m0:00:01\u001b[0m\r\u001b[2K     \u001b[91m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[91m╸\u001b[0m \u001b[32m28.0/28.0 MB\u001b[0m \u001b[31m120.9 MB/s\u001b[0m eta \u001b[36m0:00:01\u001b[0m\r\u001b[2K     \u001b[91m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[91m╸\u001b[0m \u001b[32m28.0/28.0 MB\u001b[0m \u001b[31m120.9 MB/s\u001b[0m eta \u001b[36m0:00:01\u001b[0m\r\u001b[2K     \u001b[91m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[91m╸\u001b[0m \u001b[32m28.0/28.0 MB\u001b[0m \u001b[31m120.9 MB/s\u001b[0m eta \u001b[36m0:00:01\u001b[0m\r\u001b[2K     \u001b[91m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[91m╸\u001b[0m \u001b[32m28.0/28.0 MB\u001b[0m \u001b[31m120.9 MB/s\u001b[0m eta \u001b[36m0:00:01\u001b[0m\r\u001b[2K     \u001b[91m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[91m╸\u001b[0m \u001b[32m28.0/28.0 MB\u001b[0m \u001b[31m120.9 MB/s\u001b[0m eta \u001b[36m0:00:01\u001b[0m\r\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m28.0/28.0 MB\u001b[0m \u001b[31m33.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25hRequirement already satisfied: numpy>=1.22 in /usr/local/lib/python3.10/dist-packages (from qutip) (1.25.2)\n",
             "Requirement already satisfied: scipy>=1.9 in /usr/local/lib/python3.10/dist-packages (from qutip) (1.11.4)\n",
-            "Requirement already satisfied: packaging in /usr/local/lib/python3.10/dist-packages (from qutip) (24.1)\n"
+            "Requirement already satisfied: packaging in /usr/local/lib/python3.10/dist-packages (from qutip) (24.1)\n",
+            "Installing collected packages: qutip\n",
+            "Successfully installed qutip-5.0.3.post1\n"
           ]
         }
       ]
@@ -221,13 +225,13 @@
       "metadata": {
         "id": "W29qfNdbEvbo"
       },
-      "execution_count": 3,
+      "execution_count": 118,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "def entanglement_generation(rho_initial, q1, q2, F_initial, n, P_link, T_p):\n",
+        "def entanglement_generation(rho_initial, target_qubits, F_initial, n, P_link, T_p):\n",
         "  \"\"\"\n",
         "    This function generates entanglement across 2 neighbouring repeater stations\n",
         "    q1 and q2. It does this by first creating a phi+ bell state density matrix\n",
@@ -241,6 +245,7 @@
         "  \"\"\"\n",
         "  # SET UP\n",
         "  # getting the number of qubits either side of the pair and making a list of them\n",
+        "  q1, q2 = target_qubits[0], target_qubits[1]\n",
         "  num_qubits_left = q1\n",
         "  num_qubits_right = (num_qubits - 1) - q2\n",
         "  qubits_left_list = [i for i in range(num_qubits_left)]\n",
@@ -265,7 +270,7 @@
       "metadata": {
         "id": "UtxWBjOk22Fx"
       },
-      "execution_count": 4,
+      "execution_count": 119,
       "outputs": []
     },
     {
@@ -288,7 +293,7 @@
         "\n",
         "# DEFINING ENTANGLEMENT GENERATION PARAMETERS\n",
         "entang_gen_args = {\n",
-        "    'F_initial' : 1,     # initial fidelity of the bell state generated\n",
+        "    # initial fidelity of the bell state generated\n",
         "    'n' : 1,             # probability a link is established between 2 neighbouring repeater stations\n",
         "    'P_link' : 1,        # probability a link is established without considering distance based losses\n",
         "    'T_p' : 0            # time to prepare an entangled pair\n",
@@ -297,7 +302,7 @@
       "metadata": {
         "id": "KOZOmmI9GEfq"
       },
-      "execution_count": 5,
+      "execution_count": 120,
       "outputs": []
     },
     {
@@ -305,7 +310,7 @@
       "source": [
         "# INITIALISING SYSTEM + RUNNNING ENTANGLEMENT GENERATION EVENT\n",
         "rho = initial_rho(num_qubits)\n",
-        "rho = entanglement_generation(rho_initial=rho, q1=0, q2=1, **entang_gen_args)\n",
+        "rho = entanglement_generation(rho_initial=rho, target_qubits=[0,1], F_initial=1, **entang_gen_args)\n",
         "\n",
         "for i in range(num_qubits):\n",
         "  print(f'Qubit{i}\\n', rho.ptrace(i).full(), '\\n')\n",
@@ -316,9 +321,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "0amzOK3IhFUS",
-        "outputId": "b18e69e6-e53a-41bc-d787-d7ce57c3df8e"
+        "outputId": "9d899dc1-a5fb-49c9-cb83-cfb9ce302773"
       },
-      "execution_count": 6,
+      "execution_count": 121,
       "outputs": [
         {
           "output_type": "stream",
@@ -353,7 +358,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 6
+          "execution_count": 121
         }
       ]
     },
@@ -369,100 +374,128 @@
     {
       "cell_type": "code",
       "source": [
-        "def imperfect_bell_measurements(rho_initial, q1, q2, lambda_BSM):\n",
-        "  # checking its 2 qubits beside eachother\n",
-        "  if isinstance (q1, int) and isinstance (q2, int) and np.abs(q2 - q1) == 1:\n",
         "\n",
-        "    num_qubits_left = q1\n",
-        "    num_qubits_right = (num_qubits - 1) - q2\n",
-        "    qubits_left_list = [i for i in range(num_qubits_left)]\n",
-        "    qubits_right_list = [i + num_qubits_left + 2 for i in range(num_qubits_right)]\n",
+        "def entanglement_swapping(rho_initial, q1q2, q3q4, lambda_BSM):\n",
+        "  \"\"\"\n",
+        "  rho_initial = denisty matrix\n",
+        "  target_qubits = list of length 4\n",
+        "  \"\"\"\n",
+        "  q0, q1 = q1q2[0], q1q2[1]\n",
+        "  q2, q3 = q3q4[0], q3q4[1]\n",
+        "  num_qubits_left = q1\n",
+        "  num_qubits_right = (num_qubits - 1) - q3\n",
+        "  qubits_left_list = [i for i in range(num_qubits_left)]\n",
+        "  qubits_right_list = [i + num_qubits_left+2 for i in range(num_qubits_right)]\n",
         "\n",
-        "    imperfect_measurement = lambda_BSM * rho_initial.ptrace([q1, q2]) + (1 - lambda_BSM) / 4 * tensor(I(), I())\n",
-        "    print(imperfect_measurement.ptrace(0).full(),'\\n')\n",
-        "    print(imperfect_measurement.ptrace(1).full(), '\\n')\n",
-        "    rho = state_inserter(rho_initial = rho_initial, target_qubits = [q1,q2], state = imperfect_measurement)\n",
+        "  bell_measure_op = tensor(I(), bell_state('phi+'), I())\n",
         "\n",
-        "    return rho\n",
+        "  # getting the entangled state of qubits 0 and 3\n",
+        "  rho_q1q2 = rho_initial.ptrace(q1q2)\n",
+        "  rho_q3q4 = rho_initial.ptrace(q3q4)\n",
+        "  rho_initial_target = tensor(rho_q1q2, rho_q3q4)\n",
         "\n",
-        "  else:\n",
-        "    raise TypeError('Invalid data type for target_qubits, must be a list with 2 adjacent qubits')"
+        "  state_03 = (bell_measure_op * rho_initial_target * bell_measure_op.dag()).ptrace([0,3]).unit()\n",
+        "  state_03 = lambda_BSM * state_03 + (1 - lambda_BSM) / 4 * tensor(I(), I())\n",
+        "\n",
+        "\n",
+        "  # tensoring with two 0 state qubits (their state doesnt matter bc we wont be using again, im saying 0 to keep it simple)\n",
+        "  state_0312 = tensor(state_03, zero_rho, zero_rho)\n",
+        "\n",
+        "  perm_order = [0, 2, 3, 1]\n",
+        "  state = state_0312.permute(perm_order)\n",
+        "  rho = state_inserter(rho_initial=rho_initial, target_qubits=target_qubits, state=state)\n",
+        "  return rho"
       ],
       "metadata": {
-        "id": "n8VqURthf8BW"
+        "id": "dbY9SV5HG7qL"
       },
-      "execution_count": 7,
+      "execution_count": 122,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "For fidelities"
+      ],
+      "metadata": {
+        "id": "flCeSrysI-Me"
+      }
     },
     {
       "cell_type": "code",
       "source": [
-        "# Printing partial traces\n",
-        "num_qubits = 9\n",
+        "num_qubits = 4\n",
         "total_L = 100\n",
         "d = total_L/(num_qubits - 1)\n",
         "\n",
-        "rho_initial = initial_rho(num_qubits)\n",
+        "rho = initial_rho(num_qubits)\n",
+        "rho = entanglement_generation(rho_initial=rho, target_qubits=[0,1], F_initial = 0.9, **entang_gen_args)\n",
+        "rho = entanglement_generation(rho_initial = rho, target_qubits=[2,3], F_initial = 0.75, **entang_gen_args)\n",
+        "rho = entanglement_swapping(rho_initial = rho, q1q2 = [0,1], q3q4=[2,3], lambda_BSM= 1)\n",
         "\n",
-        "rho = imperfect_bell_measurements(rho_initial = rho_initial, q1 = 0, q2 = 1, lambda_BSM = 0.5)\n",
+        "#for i in range(num_qubits):\n",
+        "  #print(f'Qubit{i}\\n', np.round(rho.ptrace(i).full(),3), '\\n')\n",
         "\n",
-        "for i in range(num_qubits):\n",
-        "  print(f'Qubit{i}\\n', rho.ptrace(i).full(), '\\n')"
+        "state_03 = rho.ptrace([0,3])\n",
+        "#print('Qubits 0 and 3 \\n',np.round(state_03.full(), 3))\n",
+        "\n",
+        "phi_plus_ket = (tensor(basis(2, 0), basis(2, 0)) + tensor(basis(2, 1), basis(2, 1))).unit()\n",
+        "print('\\nFidelity:', np.round(phi_plus_ket.dag() * state_03 * phi_plus_ket, 3))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 309
+        },
+        "id": "yutT_TixTTHM",
+        "outputId": "b655aeaa-738d-4070-d5cb-c75af5adaad4"
+      },
+      "execution_count": 125,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "name 'target_qubits' is not defined",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-125-9244c8210805>\u001b[0m in \u001b[0;36m<cell line: 8>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0mrho\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mentanglement_generation\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrho_initial\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mrho\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtarget_qubits\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mF_initial\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m0.9\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mentang_gen_args\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0mrho\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mentanglement_generation\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrho_initial\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mrho\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtarget_qubits\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mF_initial\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m0.75\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mentang_gen_args\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 8\u001b[0;31m \u001b[0mrho\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mentanglement_swapping\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrho_initial\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mrho\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mq1q2\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mq3q4\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlambda_BSM\u001b[0m\u001b[0;34m=\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      9\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0;31m#for i in range(num_qubits):\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m<ipython-input-122-1ee31176ee1e>\u001b[0m in \u001b[0;36mentanglement_swapping\u001b[0;34m(rho_initial, q1q2, q3q4, lambda_BSM)\u001b[0m\n\u001b[1;32m     27\u001b[0m   \u001b[0mperm_order\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m3\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     28\u001b[0m   \u001b[0mstate\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mstate_0312\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpermute\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mperm_order\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 29\u001b[0;31m   \u001b[0mrho\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mstate_inserter\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrho_initial\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mrho_initial\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtarget_qubits\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mtarget_qubits\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstate\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mstate\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     30\u001b[0m   \u001b[0;32mreturn\u001b[0m \u001b[0mrho\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mNameError\u001b[0m: name 'target_qubits' is not defined"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "initial_ket = tensor(basis(2,0), basis(2,0),basis(2,0),basis(2,1),basis(2,1),basis(2,1))\n",
+        "initial_rho = initial_ket * initial_ket.dag()\n",
+        "reduced = initial_rho.ptrace([0,4,1])\n",
+        "for i in range(3):\n",
+        "  print(reduced.ptrace(i).full(),'\\n')"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "l6LC3bfVEQDQ",
-        "outputId": "54a0f659-6d58-423f-e68a-0bbe54891987"
+        "id": "BC_pv3P4oZww",
+        "outputId": "94e28eeb-024d-46bd-b47c-772ad73db278"
       },
-      "execution_count": 8,
+      "execution_count": 114,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "[[0.75+0.j 0.  +0.j]\n",
-            " [0.  +0.j 0.25+0.j]] \n",
-            "\n",
-            "[[0.75+0.j 0.  +0.j]\n",
-            " [0.  +0.j 0.25+0.j]] \n",
-            "\n",
-            "Qubit0\n",
-            " [[0.75+0.j 0.  +0.j]\n",
-            " [0.  +0.j 0.25+0.j]] \n",
-            "\n",
-            "Qubit1\n",
-            " [[0.75+0.j 0.  +0.j]\n",
-            " [0.  +0.j 0.25+0.j]] \n",
-            "\n",
-            "Qubit2\n",
-            " [[1.+0.j 0.+0.j]\n",
+            "[[1.+0.j 0.+0.j]\n",
             " [0.+0.j 0.+0.j]] \n",
             "\n",
-            "Qubit3\n",
-            " [[1.+0.j 0.+0.j]\n",
+            "[[1.+0.j 0.+0.j]\n",
             " [0.+0.j 0.+0.j]] \n",
             "\n",
-            "Qubit4\n",
-            " [[1.+0.j 0.+0.j]\n",
-            " [0.+0.j 0.+0.j]] \n",
-            "\n",
-            "Qubit5\n",
-            " [[1.+0.j 0.+0.j]\n",
-            " [0.+0.j 0.+0.j]] \n",
-            "\n",
-            "Qubit6\n",
-            " [[1.+0.j 0.+0.j]\n",
-            " [0.+0.j 0.+0.j]] \n",
-            "\n",
-            "Qubit7\n",
-            " [[1.+0.j 0.+0.j]\n",
-            " [0.+0.j 0.+0.j]] \n",
-            "\n",
-            "Qubit8\n",
-            " [[1.+0.j 0.+0.j]\n",
-            " [0.+0.j 0.+0.j]] \n",
+            "[[0.+0.j 0.+0.j]\n",
+            " [0.+0.j 1.+0.j]] \n",
             "\n"
           ]
         }
@@ -472,18 +505,9 @@
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "dbY9SV5HG7qL"
+        "id": "nOZso2NKM-Zv"
       },
-      "execution_count": 8,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "yutT_TixTTHM"
-      },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     }
   ]
